--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@
   text-align: center;
 }
 
+#root > .no-root-padding {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
